# Alryn

./: .gitignore  CMakeLists.txt  Makefile  README.md
.github/workflows/: ci.yml
cmake/: AlrynWarnings.cmake  CompileShaders.cmake
docs/: TESTING.md  character-overhaul-plan.md  cloth-physics-plan.md  skinned-characters-plan.md
docs/Reference Images/: README.md
engine/: CMakeLists.txt
engine/Alryn/: Alryn.h  Core.h
engine/Alryn/Character/: BodyMesh.cpp  BodyMesh.h  CharacterAnimator.cpp  CharacterAnimator.h  CharacterAppearance.h  CharacterModel.cpp  CharacterModel.h  ClothRig.cpp  ClothRig.h  Equipment.h  Outfit.cpp  Outfit.h  OutfitMesh.cpp  OutfitMesh.h  SkinBuilder.h  SkinnedMesh.cpp  SkinnedMesh.h  Weapon.cpp  Weapon.h
engine/Alryn/Combat/: Enemy.h  SiegeMode.cpp  Villager.h
engine/Alryn/Core/: Assert.h  Density.cpp  Density.h  Event.h  Log.cpp  Log.h  Math.h  Noise.cpp  Noise.h  NonCopyable.h  Paths.cpp  Paths.h  Time.h  Types.h  UUID.cpp  UUID.h
engine/Alryn/Engine/: Application.cpp  Application.h  Engine.cpp  Engine.h  Subsystem.h
engine/Alryn/Game/: Abilities.cpp  Contract.h  Contracts.cpp  GameManager.cpp  GameManager.h  Roles.h
engine/Alryn/Net/: ByteBuffer.cpp  ByteBuffer.h  GameServer.cpp  GameServer.h  NetClient.cpp  NetClient.h  NetCommon.cpp  NetCommon.h  NetServer.cpp  NetServer.h  Protocol.cpp  Protocol.h
engine/Alryn/Physics/: CharacterController.cpp  CharacterController.h  Collider.h  CollisionWorld.cpp  CollisionWorld.h  Projectile.h
engine/Alryn/Platform/: Events.h  Input.cpp  Input.h  Window.cpp  Window.h
engine/Alryn/Renderer/: Mesh.cpp  Mesh.h  MeshPrimitives.cpp  MeshPrimitives.h  Renderer.cpp  Renderer.h  Vertex.h
engine/Alryn/Renderer/Vulkan/: VulkanBuffer.cpp  VulkanBuffer.h  VulkanCommon.cpp  VulkanCommon.h  VulkanDevice.cpp  VulkanDevice.h  VulkanImage.cpp  VulkanImage.h  VulkanInstance.cpp  VulkanInstance.h  VulkanPipeline.cpp  VulkanPipeline.h  VulkanSwapchain.cpp  VulkanSwapchain.h
engine/Alryn/Scene/: Camera.cpp  Camera.h  Component.h  GameObject.cpp  GameObject.h  Scene.cpp  Scene.h  Transform.cpp  Transform.h
engine/Alryn/Terrain/: MarchingTetra.cpp  MarchingTetra.h  PropScatter.h  RoadNetwork.cpp  RoadNetwork.h  ScatterHash.h  StreamingTerrain.cpp  StreamingTerrain.h  Terrain.cpp  Terrain.h  TreeScatter.h  VegetationScatter.h  VoxelField.cpp  VoxelField.h  WorldGen.h  WorldSampler.h
engine/Alryn/UI/: DrawList.cpp  DrawList.h  Theme.h  UI.h  UIContext.cpp  UIContext.h  VectorFont.cpp  VectorFont.h  Widget.cpp  Widget.h  Widgets.cpp  Widgets.h
engine/Alryn/World/: Prop.h  PropLibrary.cpp  PropLibrary.h  VehicleTypes.cpp  VehicleTypes.h  Village.h
game/: Bot.cpp  Bot.h  CMakeLists.txt  ClientApp.cpp  ClientApp.h  ClientAppCharacter.cpp  ClientAppCloth.cpp  ClientAppHud.cpp  ClientAppInput.cpp  ClientAppMenu.cpp  ClientAppVfx.cpp  ClientAppWagons.cpp  ClientAppWorld.cpp  GameConfig.h  ServerApp.h  main.cpp
shaders/: emissive.frag  foliage.frag  grass.vert  mesh.frag  mesh.vert  shadow.vert  sky.frag  sky.vert  ui.frag  ui.vert  water.frag  water.vert
tests/: CMakeLists.txt  character_tests.cpp  combat_tests.cpp  contract_tests.cpp  core_tests.cpp  mesh_tests.cpp  net_tests.cpp  physics_tests.cpp  platform_tests.cpp  render_offscreen_tests.cpp  renderer_tests.cpp  role_tests.cpp  scene_shot_tests.cpp  scene_tests.cpp  terrain_tests.cpp  test_main.cpp  ui_tests.cpp
tests/support/: OffscreenRenderer.cpp  OffscreenRenderer.h
tools/: CMakeLists.txt  asset_preview.cpp
